--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Build docker image
         run: docker build -t prabirkalwani/portfolio .
       - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      run: docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_ACCESS_TOKEN }}
       - name: Publish image to Docker Hub
         run: docker push prabirkalwani/portfolio:latest
 
