--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,8 +23,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Pull image from Docker Hub
-        run: docker pull prabirkalwani/portfolio:latest
+        run: sudo docker pull prabirkalwani/portfolio:latest
       - name: Delete old container
-        run: docker rm -f nextjs-app-container  
+        run: sudo docker rm -f prabir-website  
       - name: Run Docker container
-        run: docker run -d -p 3000:3000 --name nextjs-app-container prabirkalwani/portfolio:latest
+        run: sudo docker run -d -p 3000:3000 --name prabir-website prabirkalwani/portfolio:latest
