--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mdx-js/loader": "^2.1.2",
     "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
     "focus-visible": "^5.2.0",
     "next": "^12.3.0",
+    "next-navigation": "^1.0.6",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,5 +36,6 @@
     "eslint-config-next": "12.2.5",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
